-
   
    New feature: Any filtering done by spider bots are not
    persistently saved.

- 0.10.0

    New feature: Custom fields!

- 0.9.3

    Bug fixed: Loading a saved draft followup that didn't have an
    action would raise an error.
    
    Bug fixed: Loading filter options in Konquerer would load the AJAX
    request 3 times for one click.
    
    Bug fixed: Saved filters container was never imploded even if the 
    container had more saved filters in it than allowed.
    
    Bug fixed: Saving filters when only the fromname is known would
    raise an UnmatchableError.
    
- 0.9.1

    Bug fixed: NameError when checking for emails in and nothing to
    download. Thanks Luciano (Real#0743)
    

- 0.9.2

    Bug fixed: When accepting multipart emails and html2safehtml is
    not installed the default part to keep is now the text/plain part.

    Bug fixed: Loading a saved draft followup that didn't have an
    action would raise an error.
    
    Bug fixed: Loading filter options in Konquerer would load the AJAX
    request 3 times for one click.
    
    Bug fixed: Saved filters container was never imploded even if the 
    container had more saved filters in it than allowed.
    
    Bug fixed: Saving filters when only the fromname is known would
    raise an UnmatchableError.
    
- 0.9.1

    Bug fixed: Saved cookies with where only the name is known could
    cause an error on the /User page.

    Bug fixed: Delete issue form did not work.
    
- 0.9.0

    New feature: If you pass the spambot prevention test it's
    remembered in a cookie for the next 60 days rather than just for
    the session.
    
    New feature: When you've added an issue the URL it redirects to no
    longer ends with ?NewIssues=Submitted. Cleaner URLs.

    New feature: Really long URLs in the text that extend beyond the
    box it's in is truncated shorter.

    Bug fixed: Having statuses containing unicode characters could